commit d84deeb079e09b33c2339bc7a54cf7d15c3b8a85
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Fri Jan 8 13:28:04 2010 +0900

    aufs: narrow down the BKL region
    
    There is a debug feature which requires mmap_sem instead of BKL.
    Theoretically BKL is enough. This patch just introduces a necessary
    complexity, I am afraid.
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 086ef320ff863e7733e7ae8b9eead31a67d483d5
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Wed Jan 6 17:36:41 2010 +0900

    aufs: tiny, copyright 2010
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit c127eb8aeeb58e8899abffe377ae230f3d4d3c9c
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Wed Jan 6 17:21:08 2010 +0900

    aufs: tiny, copyright 2010
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 1fdadaf30b387da28b1f80d338e84dc43aa2f672
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Tue Jan 5 20:38:39 2010 +0900

    aufs: bugfix, an error path in au_new_inode()
    
    In the success path, call unlock_new_inode(). Otherwise call
    iget_failed() without iput().
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 4a46d05d5cf4b04b401a3f86a5a2bb3611a7c9aa
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Sun Jan 3 02:15:28 2010 +0900

    aufs: tiny, add a forgotten configuration
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 5f80ac5970a39e18c00db69889ef641aef9e4f48
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Sat Jan 2 16:32:31 2010 +0900

    aufs: tiny, new abstract function vfsub_dentry_open()
    
    The main purpose of this small wrapper is to minimize the confilict at
    merging GIT branches in the future.
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 3d6203a320b5d212836f05124a96a165e7490426
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Sat Jan 2 13:09:21 2010 +0900
